--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,14 @@
   margin-top: 0; 
   margin-bottom: 0; 
 }
-.main {
-  width: 100vw;
-  height: 100vh; 
-}
 h3 {
+  margin: 0; 
+  font-size: 40px; 
+  position: relative;
+  text-align: center;
+  color: black;
+}
+.hello {
   margin: 0; 
   font-size: 40px; 
   position: relative;
@@ -49,11 +52,34 @@ body {
   background-color: black;
   font-family: 'Raleway'
 }
-
-.lolo {
+.container1 {
+  width: 100vw;
+  height: 100vh; 
+}
+.main {
   z-index: 1;
   position: absolute;
   top: 10%;
   left: 50%;
   transform: translateX(-50%)
+}
+.container2 {
+  background-color: white;
+  width: 100vw;
+  height: 100vh; 
+}
+.container3 {
+  background-color: orange;
+  width: 100vw;
+  height: 100vh; 
+}
+a {
+  text-decoration: none;
+  color: black; 
+}
+.about-me {
+  width: 40%;
+  text-align: left; 
+  padding-left: 20px; 
+
 }
